--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   test-javascript:
-    name: JavaScript Tests
+    name: Continous Integration
     runs-on: [self-hosted, doctorparts-host]
 
     steps:
@@ -38,10 +38,6 @@ jobs:
         id: npm-lint
         run: npm run lint
 
-      - name: Test
-        id: npm-ci-test
-        run: npm run ci-test
-
       - name: Push
         id: action-push
         run: |
@@ -51,23 +47,3 @@ jobs:
           git add dist/
           git commit -m "dist push"
           git push
-
-
-  test-action:
-    name: GitHub Actions Test
-    runs-on: [self-hosted, doctorparts-host]
-
-    steps:
-      - name: Checkout
-        id: checkout
-        uses: actions/checkout@v4
-
-      - name: Test Local Action
-        id: test-action
-        uses: ./
-        with:
-          milliseconds: 1000
-
-      - name: Print Output
-        id: output
-        run: echo "${{ steps.test-action.outputs.time }}"
