--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
